# freetds

src/srvlib/: CMakeLists.txt  Makefile.am  srv.c  srv_freetds.c  srvlib.def
